--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,19 @@
     <artifactId>TelegramBot</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
+
         <plugins>
+
+
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>2.0.8</version>
                 <configuration>
-                    <source>6</source>
-                    <target>6</target>
+
+                    <processTypes>
+                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+                    </processTypes>
                 </configuration>
             </plugin>
 
@@ -22,7 +28,9 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>1.1.1</version>
+
                 <configuration>
+
                     <assembleDirectory>target</assembleDirectory>
                     <programs>
                         <program>
@@ -30,6 +38,7 @@
                             <name>workerBot</name>
                         </program>
                     </programs>
+
                 </configuration>
                 <executions>
                     <execution>
@@ -40,6 +49,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+
+
         </plugins>
     </build>
 
