--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                 <configuration>
 
                     <processTypes>
-                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+                        <web>java $JAVA_OPTS -cp target/classes:target/dependency/AppStart.class</web>
                     </processTypes>
                 </configuration>
             </plugin>
