--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <artifactId>TelegramBot</artifactId>
     <modelVersion>4.0.0</modelVersion>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <build>
 
         <plugins>
