--- a/pom.xml
+++ b/pom.xml
@@ -31,17 +31,18 @@
                 <configuration>
 
                     <processTypes>
-                        <worker>java $JAVA_OPTS -cp target/classes:target/dependency/AppStart.class</worker>
+                        <web>java $JAVA_OPTS -cp build/staging:build/staging/* com.soft.vadim.start.AppStart</web>
                     </processTypes>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
-                <artifactId>appassembler-maven-plugin</artifactId>
                 <version>1.1.1</version>
+                <artifactId>appassembler-maven-plugin</artifactId>
 
                 <configuration>
+
 
                     <assembleDirectory>target</assembleDirectory>
                     <programs>
