--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
                 <version>2.0.8</version>
                 <configuration>
 
-                    <processTypes>
-                        <web>java $JAVA_OPTS -cp build/staging:build/staging/* com.soft.vadim.start.AppStart</web>
-                    </processTypes>
+<!--                    <processTypes>-->
+<!--                        <web>java $JAVA_OPTS -cp build/staging:build/staging/* com.soft.vadim.start.AppStart</web>-->
+<!--                    </processTypes>-->
                 </configuration>
             </plugin>
 
@@ -81,6 +81,12 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
